# wenvisiont-test

./: .gitignore  ARCHITECTURE.md  Dockerfile  docker-compose.dev.yml  docker-compose.yml  langgraph.json
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  architecture.html  architecture.md  check_infra_config.py  clear_infra_config.py  clickhouse_config.xml  implementation_report.txt  pyproject.toml  reproduce_issue.py  reproduce_tool.py
backend/alembic/: env.py
backend/alembic/versions/: 25f601fdc6f7_add_metadata_to_step_logs.py  2ab6c2ce953b_add_workflows_table.py  92393ee10649_add_superagents_table.py  af7161f0a6cb_refactor_sqlmodel.py  c8f2a5b7d9e1_add_skills_table.py
backend/scripts/: migrate_agents.py  verify_phase2.py
backend/src/api/: auth.py  dependencies.py  main.py  mcp.py  middleware.py
backend/src/brain/: graph.py  logger.py  nodes.py  prompts.py  registry.py  seeder.py
backend/src/brain/nodes/: __init__.py  execution.py  qa.py  supervisor.py  tools.py
backend/src/config/agents/: data_analyst.yaml  human.yaml  knowledge_specialist.yaml  researcher.yaml  senior_software_engineer_dry_src.yaml  truth_verifier_agent.yaml
backend/src/config/workflows/: Financial Risk Analysis Workflow.yaml  PropertyManagerMultiAgentSystem.yaml  Python Engineering to QA Workflow.yaml.bak
backend/src/core/: config.py  database.py  lifespan.py  middleware.py  observability.py  seeding.py
backend/src/crew/: agents.py  custom_llm.py  tasks.py
backend/src/mcp/: rag.py
backend/src/models/: agents.py  architect.py  auth.py  configuration.py  conversations.py  history.py  infrastructure.py  mcp.py  skills.py  state.py
backend/src/services/: architect_service.py  crew.py  crew_service.py  execution_manager.py  graph_service.py  infrastructure.py  mcp.py  orchestrator.py  skill_service.py  tools.py
backend/src/services/gcp/: __init__.py  bigquery.py  cloud_logging.py  cloud_tasks.py  sdp.py  vertex_rag.py
backend/src/tools/: adapter.py  bigquery.py  files.py  inspect_mcp.py  s3.py  server.py  test_integration.py  test_rag_bq.py
backend/src/utils/: pii.py  tokens.py
backend/tests/: conftest.py  repro_s3_presigned.py  verify_mcp.py
backend/tests/api/: test_agents.py  test_architect.py  test_config.py  test_execution.py  test_files.py  test_history.py  test_infrastructure_endpoints.py  test_main.py  test_mcp.py  test_stats.py  test_stream_topology.py
backend/tests/brain/: test_dynamic_graph.py  test_execute_agent.py  test_graph_routing.py  test_interrupt_verification.py  test_prompts.py  test_registry.py
backend/tests/e2e/: test_health_auth.py
backend/tests/manual/: verify_pii_metadata.py
backend/tests/services/: test_architect_service.py  test_crew.py  test_graph_service.py  test_infrastructure.py  test_integration.py  test_orchestrator.py  test_qa_flow.py
backend/tests/unit/: test_citations.py  test_iap_auth.py  test_pii.py
(+156 files in other folders)
