[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.9.2",
    "fastapi>=0.128.0",
    "fastmcp>=2.14.0",
    "mcp~=1.23.1",
    "langchain>=1.2.7",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.2",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.11.9",
    "uvicorn>=0.40.0",
    "langchain-openai>=1.1.7",

    "aioboto3>=15.5.0",
    "aiofiles>=25.1.0",
    "alembic>=1.18.2",
    "sqlmodel>=0.0.31",
    "orjson>=3.11.5",
    "langfuse>=3.12.1",
    "pgvector>=0.4.2",
    "nest-asyncio>=1.6.0",
    "google-cloud-aiplatform>=1.38.1",
    "google-cloud-bigquery>=3.17.2",
    "google-cloud-dlp>=3.14.0",
    "google-cloud-discoveryengine>=0.11.0",
    "pandas>=2.1.4",
    "db-dtypes>=1.2.0",
    "google-auth>=2.0.0",
]

[tool.uv]
override-dependencies = ["openai>=1.110.0"]


[dependency-groups]
dev = [
    "expects>=0.9.0",
    "poethepoet>=0.40.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"



[tool.poe.tasks]
dev = "env PYTHONPATH=src uvicorn api.main:app --host 0.0.0.0 --port 8000 --reload --log-level info"
